Finish HealthPoints option 1